Adicion de contenido
se adiciona el header, logtipo, iconos de las redes sociales y el menu de la barra de navegacion, se adapta por el momento a cualquier dispositivo

--- a/Blog musica Bootstrap/css/estilos.css
+++ b/Blog musica Bootstrap/css/estilos.css
@@ -1,181 +1,38 @@
-.cinema-body {
-  background: url(../img/fondo.jpg);
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  width: 100%;
-  height: 100%;
+body {
+  background: rgb(150, 135, 135);
+  padding: 0rem 5rem 0rem 5rem;
 }
 
-.navbar-inverse {
-  background-color: rgba(8, 45, 94, 0.95);
-  min-height: 10%;
-  border: none;
+header {
+  background: rgb(31, 242, 210);
 }
 
 .logo-img {
-  width: 100px;
-}
-
-.container-fluid {
-  margin-top: 73px;
-}
-
-.jumbotron {
-  background: url(../img/cartelera.jpg);
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  min-height: 500px;
-  border-radius: 0px !important;
-  margin-bottom: 0px;
-}
-
-.jumbotron-img {
-  width: 220px;
-  margin-top: 20px;
-}
-
-.jumbotron-text {
-  font-size: 16px;
-  margin-top: 20px;
-  color: #FFFFFF;
+  padding: 2rem 0rem 2rem 3rem;
+  height: 20rem;
+  width: 20rem;
 }
 
 .redes-sociales {
-  margin-top: 30px;
+  padding-top: 10rem;
+  padding-left: 25rem;
 }
 
-.img-social {
-  width: 40px;
-  height: 40px;
+.navbar-default {
+  background-color: rgb(112, 90, 237);
+  border: none;
 }
 
-.img-movies {
-  height: 260px;
-  padding: 6px;
-  margin-top: 22px;
-}
-
-.movie-title {
-  color: #FFFFFF;
-}
-
-.welcome-title {
-  color: #FFFFFF;
-  margin-right: 10px;
-}
-
-.titulo-cartelera {
-  min-height: 35px;
-  background-color: rgba(8, 45, 94, 0.95);
-}
-
-.titulo-text {
-  font-size: 18px;
-  font-weight: bolder;
-  color: #FFFFFF;
-  padding: 10px;
-}
-
-.movies-row {
-  background: rgba(0, 0, 0, 0.8);
-  min-height: 350px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-.movies-column {
-  margin-top: 5px;
-  min-height: 330px;
-  border: 1px dashed #FFFFFF;
-}
-.left-column {
-  border-right: 1px dashed #FFFFFF;
-}
-
-.row-centered {
-  text-align:center;
-}
-
-.services-text {
-  color: #FFFFFF;
-  margin-top: 13px;
-}
-
-.col-centered {
-  display:inline-block;
-  float:none;
-}
-
-.user_data {
-  margin-top: 10px;
-  font-size: 18px;
-  color: #FFFFFF;
-}
-
-.input-element {
-  width: 100%;
-  height: 28px;
-  padding: 10px;
-  color: #b7a3a3;
-  background-color: rgb(255, 255, 255);
-  opacity: 0.4;
-  border-radius: 4px;
-  margin-top: 5px;
-}
-
-.label-class {
-  font-size: 13px;
-  margin-right: 10px;
-}
-
-.btn-save {
-  width: 40%;
-  background: rgb(34, 43, 214);
-  opacity: 0.95;
-  color: white;
+.contenido-nav {
+  color: black;
 }
 
 @media (max-width: 770px) {
-  h2 {
-    font-size: 22px;
+  body {
+    padding: 0;
   }
-
-  .titulo-text {
-    font-size: 15px;
-  }
-
-  .right-column {
-    display: none;
-  }
-
-  .movies-row {
-    padding-left: 0px;
-    padding-right: 0px;
-    min-height: 250px;;
-  }
-
-  .container-fluid{
-    margin-top: 60px;
-  }
-
-  .movies-column {
-    min-height: 230px;
-  }
-
-  .jumbotron {
-    min-height: 400px;
-  }
-
-  .jumbotron-img {
-    width: 150px;
-    margin-top: 20px;
-  }
-
-  .img-movies {
-    height: 133px;
-    padding: 6px;
-    margin-top: 22px;
+  
+  .redes-sociales {
+    padding: 0rem 2rem 2rem 2rem;
   }
 }
